Fix #454: Profile about page missing left and right margin on mobile screen (#7313)

--- a/themes/HumHub/css/theme.css
+++ b/themes/HumHub/css/theme.css
@@ -2331,6 +2331,9 @@ div.form-group div.checkbox .help-block.help-block-error:empty {
     display: none;
   }
 }
+.profile-item {
+  margin-top: 15px;
+}
 .list-group-item {
   padding: 6px 15px;
   border: none;
